--- a/css/demo.css
+++ b/css/demo.css
@@ -5,14 +5,9 @@ html, body {
 	background-position: 50% 50%;
 	background-size: cover;
 }
-a {
-	text-decoration: underline;
-}
-a:hover {
-	text-decoration: none;
-}
+
 .bg-cyan {
-	background-image: url(../bg.jpg);
+	background-image: url(../images/bg.jpg);
 }
 
 .body {
